# raven

./: .flake8  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  DEVELOPMENT_SETUP.md  MANIFEST.in  README.md  TIMELINE_MENTION_IMPLEMENTATION.md  babel_extractors.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  labeler.yml  mariadb-frappe.cnf
.github/helper/: flake8.conf  install.sh  install_dependencies.sh  site_config.json
.github/workflows/: apply-issue-labels-to-pr.yml  build.yml  ci.yml  labeler.yml  linters.yml  semantic.yml
api_docs/: bruno.json  login.bru
api_docs/Chat/: Get Channel Members.bru
api_docs/Chat Stream/: Get Messages.bru
api_docs/Preview Links/: Get Preview Link.bru
api_docs/Raven Users/: Get List.bru
api_docs/Reactions/: React.bru
api_docs/User Availability/: Get Active Users.bru  Refresh User Active State.bru
api_docs/environments/: Dev.bru
apps/mobile/: .gitignore  GoogleService-Info.plist  ShareExtension.tsx  app.json  babel.config.js  declarations.d.ts  firebase.json  global.css  google-services.json  index.share.ts  index.ts  metro.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/: .env.production  components.json  eslint.config.js  index.html  package.json  proxyOptions.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
docker/: docker-compose.yml  init.sh
docs/: mint.json
frontend/: .env.example  .env.production  .gitignore  .prettierrc  eslint.config.js  index.html  package.json  proxyOptions.js  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: frappe-push-notification.js  livechat-129007.mp3:Zone.Identifier  mixkit-message-pop-alert-2354.mp3Zone.Identifier  mystic_messenger.mp3:Zone.Identifier  notification-sound-349341.mp3:Zone.Identifier  sw.js
frontend/src/: App.tsx  ThemeProvider.tsx  global.d.ts  (+4 more)
mobile/: .env.production  README.md  capacitor.config.ts  index.html  ionic.config.json  package.json  proxyOptions.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
patches/: html-entities+2.5.2.patch
raven/: __init__.py  boot.py  hooks.py  install.py  modules.txt  notification.py  package-lock.json  package.json  patches.txt  permissions.py  raven_cloud_notifications.py  typesense_setup.py  uninstall.py  utils.py
raven-app/: .env  .env.production  index.html  package.json  proxyOptions.js  tailwind.config.js  tsconfig.json  vite.config.ts
realtime/: handlers.js
scripts/: init.sh
(+2587 files in other folders)
